fix search results text visibility in code tab
e.g. search https://github.com/kvirc/KVIrc/search?q=kvirc_perl_workaround_h_&type=Code

all our search results are now matching and visible

--- a/github-dark.css
+++ b/github-dark.css
@@ -6759,7 +6759,7 @@
   .markdown-body li.added.moved, .repo-private-label, .gist-secret-label,
   .label-private, .stale-files-tab, .signed-out-comment, .commits-list-item em,
   .unsupported-browser, .prereceive-feedback, .zhc-banner, .code-list em,
-  .issue-list em, .user-list em, .wiki-list em {
+  .issue-list em, .user-list em, .wiki-list em, .blob-code .bg-yellow-light {
     background: rgba(51, 34, 17, .4) !important;
     border: 1px solid #542 !important;
     color: #ddd !important;
